# blog_ssg_desu

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
routes/: index.html  not_found.html  routes.json
routes/blog/: index.html
routes/blog/second_test/: index.html
routes/blog/test/: index.html
routes/blog/third_test/: index.html
routes/projects/ankic/: index.html
static_generator/: Cargo.toml
